test/org/midica/testfiles/failing/eff-func-pbr-halftone-gt-max-4.midica
INCLUDE inc/instruments.midica


0: bend_range.double.set(127.997)
